# openrouter-mcp

./: .gitignore  README.md  pyproject.toml
src/openrouter_mcp/: model_hunter.py  server.py
tests/: test_auto.py  test_food_vision.py  test_free_models.py  test_gen_image.py  test_image_gen.py  test_puzzle.py  test_run.py  test_server.py  test_trans.py  test_vision.py  util_find_free_models.py
